crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_equals.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: FString(
                ExprFString {
                    range: 0..13,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..13,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                expression: Compare(
                                                    ExprCompare {
                                                        range: 3..11,
                                                        left: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 3..5,
                                                                value: Int(
                                                                    42,
                                                                ),
                                                            },
                                                        ),
                                                        ops: [
                                                            Eq,
                                                        ],
                                                        comparators: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    range: 9..11,
                                                                    value: Int(
                                                                        42,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
