crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_nested_concatenation_string_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..16,
            value: FString(
                ExprFString {
                    range: 0..16,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..16,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..15,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..6,
                                                        id: "foo",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..14,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..14,
                                                                    expression: String(
                                                                        ExprString {
                                                                            range: 8..13,
                                                                            value: StringExprValue {
                                                                                inner: Concatenated(
                                                                                    ConcatenatedStringLiteral {
                                                                                        strings: [
                                                                                            StringLiteral {
                                                                                                range: 8..10,
                                                                                                value: "",
                                                                                                unicode: false,
                                                                                            },
                                                                                            StringLiteral {
                                                                                                range: 11..13,
                                                                                                value: "",
                                                                                                unicode: false,
                                                                                            },
                                                                                        ],
                                                                                        value: "",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
