crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_self_doc_trailing_space.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..10,
            value: FString(
                ExprFString {
                    range: 0..10,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..10,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..9,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..4,
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=   ",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
