crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_concat.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..16,
            value: String(
                ExprString {
                    range: 0..16,
                    value: StringExprValue {
                        inner: Concatenated(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        unicode: false,
                                    },
                                    StringLiteral {
                                        range: 9..16,
                                        value: "world",
                                        unicode: false,
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
