crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..20,
            value: String(
                ExprString {
                    range: 0..20,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..20,
                                value: "Hello, world!",
                                unicode: true,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
